@@ -60,13 +60,26 @@ public:
   //Used by AccelGroup:
   _WRAP_METHOD(void set_accel_path(const Glib::ustring& accel_path), gtk_action_set_accel_path)
   _WRAP_METHOD(void set_accel_group(const Glib::RefPtr<AccelGroup>& accel_group), gtk_action_set_accel_group)
-      
+
+  _WRAP_PROPERTY("name", Glib::ustring)
+  _WRAP_PROPERTY("label", Glib::ustring)
+  _WRAP_PROPERTY("short_label", Glib::ustring)
+  _WRAP_PROPERTY("tooltip", Glib::ustring)
+  _WRAP_PROPERTY("stock_id", StockID)
+  _WRAP_PROPERTY("visible_horizontal", bool)
+  _WRAP_PROPERTY("visible_vertical", bool)
+  _WRAP_PROPERTY("is_important", bool)
+  _WRAP_PROPERTY("hide_if_empty", bool)
+  _WRAP_PROPERTY("sensitive", bool)
+  _WRAP_PROPERTY("visible", bool)
+
+           
 protected:
   //For use by child actions:  
   _WRAP_METHOD(void block_activate_from(Widget& proxy), gtk_action_block_activate_from)
   _WRAP_METHOD(void unblock_activate_from(Widget& proxy), gtk_action_unblock_activate_from)
- 
 
+ 
   //Widget-creation routines:
   _WRAP_VFUNC(Widget* create_menu_item(), "create_menu_item")
   _WRAP_VFUNC(Widget* create_tool_item(), "create_tool_item")
