@@ -162,9 +162,19 @@ protected:
 public:
 
   _WRAP_METHOD(void pack_start(Widget& child, bool expand, bool fill, guint padding = 0), gtk_box_pack_start)
+
+  /** Left side insert a widget to a box.
+   * @param options Controls how the widget expands to fill space, and how the space around them is used.
+   * @param padding Padding that is added on either side of the widget. This is different to spacing set when the box is created (or with set_spacing()) - spacing is added between objects, and padding is added on either side of an object.
+   */
   void pack_start(Widget& child, PackOptions options = PACK_EXPAND_WIDGET, guint padding = 0);
 
   _WRAP_METHOD(void pack_end(Widget& child, bool expand, bool fill, guint padding = 0), gtk_box_pack_end)
+
+  /** right side insert a widget to a box.
+   * @param options Controls how the widget expands to fill space, and how the space around them is used.
+   * @param padding Padding that is added on either side of the widget. This is different to spacing set when the box is created (or with set_spacing()) - spacing is added between objects, and padding is added on either side of an object.
+   */
   void pack_end(Widget& child, PackOptions options = PACK_EXPAND_WIDGET, guint padding = 0);
 
   _WRAP_METHOD(void set_homogeneous(bool homogeneous = true), gtk_box_set_homogeneous)
@@ -175,7 +185,15 @@ public:
 
   _WRAP_METHOD(void reorder_child(Widget& child, int pos), gtk_box_reorder_child)
 
+  /* Get the child widgets.
+   * @result An STL-style container of pointers to the box's child widgets.
+   */
   BoxList& children();
+
+  //TODO: Shouldn't this be a list of const, instead of a const list?
+  /* Get the child widgets.
+   * @result An STL-style container of pointers to the box's child widgets.
+   */
   const BoxList& children() const;
 
   _WRAP_PROPERTY("spacing", int)
