@@ -120,7 +120,7 @@ public:
   _WRAP_SIGNAL(void file_activated(), "file_activated", no_default_handler)
 
   _WRAP_PROPERTY("action", FileChooserAction)
-  //_WRAP_PROPERTY("file-system", FileSystem) //construct-only
+  //TODO: _WRAP_PROPERTY("file-system", FileSystem) //construct-only
   _WRAP_PROPERTY("filter", Glib::RefPtr<FileFilter>)
   _WRAP_PROPERTY("folder-mode", bool)
   _WRAP_PROPERTY("local-only", bool)
