@@ -571,26 +571,6 @@
   )
 )
 
-
-;; From /home/murrayc/cvs/gnome26/gtk+/gtk/gtkicontheme.h
-
-(define-enum-extended IconLookupFlags
-  (in-module "Gtk")
-  (c-name "GtkIconLookupFlags")
-  (values
-  )
-)
-
-(define-enum-extended IconThemeError
-  (in-module "Gtk")
-  (c-name "GtkIconThemeError")
-  (values
-    '("not-found" "GTK_ICON_THEME_NOT_FOUND" "0")
-    '("failed" "GTK_ICON_THEME_FAILED" "1")
-  )
-)
-
-
 ;; From /home/murrayc/cvs/gnome26/gtk+/gtk/gtkfilechooser.h
 
 (define-enum-extended FileChooserAction
@@ -657,7 +637,6 @@
     '("mime-type" "GTK_FILE_INFO_MIME_TYPE" "1 << 3")
     '("modification-time" "GTK_FILE_INFO_MODIFICATION_TIME" "1 << 4")
     '("size" "GTK_FILE_INFO_SIZE" "1 << 5")
-    '("icon" "GTK_FILE_INFO_ICON" "1 << 6")
   )
 )
 
@@ -697,6 +676,27 @@
     '("info" "GTK_FILE_SYSTEM_MODEL_INFO" "0")
     '("display-name" "GTK_FILE_SYSTEM_MODEL_DISPLAY_NAME" "1")
     '("n-columns" "GTK_FILE_SYSTEM_MODEL_N_COLUMNS" "2")
+  )
+)
+
+;; From /home/murrayc/cvs/gnome26/gtk+/gtk/gtkicontheme.h
+
+(define-flags-extended IconLookupFlags
+  (in-module "Gtk")
+  (c-name "GtkIconLookupFlags")
+  (values
+    '("no-svg" "GTK_ICON_LOOKUP_NO_SVG" "1 << 0")
+    '("force-svg" "GTK_ICON_LOOKUP_FORCE_SVG" "1 << 1")
+    '("use-builtin" "GTK_ICON_LOOKUP_USE_BUILTIN" "1 << 2")
+  )
+)
+
+(define-enum-extended IconThemeError
+  (in-module "Gtk")
+  (c-name "GtkIconThemeError")
+  (values
+    '("not-found" "GTK_ICON_THEME_NOT_FOUND" "0")
+    '("failed" "GTK_ICON_THEME_FAILED" "1")
   )
 )
 
@@ -986,23 +986,6 @@
   )
 )
 
-;; From /home/murrayc/cvs/gnome26/gtk+/gtk/gtktreeprivate.h
-
-(define-flags-extended TreeViewFlags
-  (in-module "Gtk")
-  (c-name "GtkTreeViewFlags")
-  (values
-    '("is-list" "GTK_TREE_VIEW_IS_LIST" "1 << 0")
-    '("show-expanders" "GTK_TREE_VIEW_SHOW_EXPANDERS" "1 << 1")
-    '("in-column-resize" "GTK_TREE_VIEW_IN_COLUMN_RESIZE" "1 << 2")
-    '("arrow-prelit" "GTK_TREE_VIEW_ARROW_PRELIT" "1 << 3")
-    '("headers-visible" "GTK_TREE_VIEW_HEADERS_VISIBLE" "1 << 4")
-    '("draw-keyfocus" "GTK_TREE_VIEW_DRAW_KEYFOCUS" "1 << 5")
-    '("model-setup" "GTK_TREE_VIEW_MODEL_SETUP" "1 << 6")
-    '("in-column-drag" "GTK_TREE_VIEW_IN_COLUMN_DRAG" "1 << 7")
-  )
-)
-
 ;; From /home/murrayc/cvs/gnome26/gtk+/gtk/gtktreeviewcolumn.h
 
 (define-enum-extended TreeViewColumnSizing
@@ -1030,20 +1013,20 @@
 
 ;; From /home/murrayc/cvs/gnome26/gtk+/gtk/gtkuimanager.h
 
-(define-enum-extended UIManagerItemType
+(define-flags-extended UIManagerItemType
   (in-module "Gtk")
   (c-name "GtkUIManagerItemType")
   (values
     '("auto" "GTK_UI_MANAGER_AUTO" "0")
-    '("menubar" "GTK_UI_MANAGER_MENUBAR" "1")
-    '("menu" "GTK_UI_MANAGER_MENU" "2")
-    '("toolbar" "GTK_UI_MANAGER_TOOLBAR" "3")
-    '("placeholder" "GTK_UI_MANAGER_PLACEHOLDER" "4")
-    '("popup" "GTK_UI_MANAGER_POPUP" "5")
-    '("menuitem" "GTK_UI_MANAGER_MENUITEM" "6")
-    '("toolitem" "GTK_UI_MANAGER_TOOLITEM" "7")
-    '("separator" "GTK_UI_MANAGER_SEPARATOR" "8")
-    '("accelerator" "GTK_UI_MANAGER_ACCELERATOR" "9")
+    '("menubar" "GTK_UI_MANAGER_MENUBAR" "1 << 0")
+    '("menu" "GTK_UI_MANAGER_MENU" "1 << 1")
+    '("toolbar" "GTK_UI_MANAGER_TOOLBAR" "1 << 2")
+    '("placeholder" "GTK_UI_MANAGER_PLACEHOLDER" "1 << 3")
+    '("popup" "GTK_UI_MANAGER_POPUP" "1 << 4")
+    '("menuitem" "GTK_UI_MANAGER_MENUITEM" "1 << 5")
+    '("toolitem" "GTK_UI_MANAGER_TOOLITEM" "1 << 6")
+    '("separator" "GTK_UI_MANAGER_SEPARATOR" "1 << 7")
+    '("accelerator" "GTK_UI_MANAGER_ACCELERATOR" "1 << 8")
   )
 )
 
@@ -1106,19 +1089,4 @@
     '("gtk-ungrab-key" "XEMBED_GTK_UNGRAB_KEY" "109")
   )
 )
-
-;; Extra stuff:
-
-(define-enum-extended ToolbarChildType
-  (in-module "Gtk")
-  (c-name "GtkToolbarChildType")
-  (values
-    '("space" "GTK_TOOLBAR_CHILD_SPACE" "0")
-    '("button" "GTK_TOOLBAR_CHILD_BUTTON" "1")
-    '("togglebutton" "GTK_TOOLBAR_CHILD_TOGGLEBUTTON" "2")
-    '("radiobutton" "GTK_TOOLBAR_CHILD_RADIOBUTTON" "3")
-    '("widget" "GTK_TOOLBAR_CHILD_WIDGET" "4")
-  )
-)
-
 
