@@ -2243,7 +2243,7 @@
   )
 )
 
-(define-enum UIManagerItemType
+(define-flags UIManagerItemType
   (in-module "Gtk")
   (c-name "GtkUIManagerItemType")
   (gtype-id "GTK_TYPE_UI_MANAGER_ITEM_TYPE")
@@ -2778,6 +2778,16 @@
   )
 )
 
+(define-method add_action_with_accel
+  (of-object "GtkActionGroup")
+  (c-name "gtk_action_group_add_action_with_accel")
+  (return-type "none")
+  (parameters
+    '("GtkAction*" "action")
+    '("const-gchar*" "accelerator")
+  )
+)
+
 (define-method remove_action
   (of-object "GtkActionGroup")
   (c-name "gtk_action_group_remove_action")
@@ -2887,6 +2897,18 @@
 (define-function gtk_action_get_type
   (c-name "gtk_action_get_type")
   (return-type "GType")
+)
+
+(define-function gtk_action_new
+  (c-name "gtk_action_new")
+  (is-constructor-of "GtkAction")
+  (return-type "GtkAction*")
+  (parameters
+    '("const-gchar*" "name")
+    '("const-gchar*" "label")
+    '("const-gchar*" "tooltip")
+    '("const-gchar*" "stock_id")
+  )
 )
 
 (define-method get_name
@@ -12218,7 +12240,7 @@
 
 (define-function gtk_events_pending
   (c-name "gtk_events_pending")
-  (return-type "gint")
+  (return-type "gboolean")
 )
 
 (define-function gtk_main_do_event
@@ -14332,6 +14354,19 @@
   (return-type "GType")
 )
 
+(define-function gtk_radio_action_new
+  (c-name "gtk_radio_action_new")
+  (is-constructor-of "GtkRadioAction")
+  (return-type "GtkRadioAction*")
+  (parameters
+    '("const-gchar*" "name")
+    '("const-gchar*" "label")
+    '("const-gchar*" "tooltip")
+    '("const-gchar*" "stock_id")
+    '("gint" "value")
+  )
+)
+
 (define-method get_group
   (of-object "GtkRadioAction")
   (c-name "gtk_radio_action_get_group")
@@ -14512,11 +14547,11 @@
   (return-type "GtkToolItem*")
 )
 
-(define-function gtk_radio_tool_button_new_with_stock_from_widget
+(define-method new_with_stock_from_widget
+  (of-object "GtkRadioToolButton")
   (c-name "gtk_radio_tool_button_new_with_stock_from_widget")
   (return-type "GtkToolItem*")
   (parameters
-    '("GtkWidget*" "group")
     '("const-gchar*" "stock_id")
   )
 )
@@ -21037,6 +21072,18 @@
   (return-type "GType")
 )
 
+(define-function gtk_toggle_action_new
+  (c-name "gtk_toggle_action_new")
+  (is-constructor-of "GtkToggleAction")
+  (return-type "GtkToggleAction*")
+  (parameters
+    '("const-gchar*" "name")
+    '("const-gchar*" "label")
+    '("const-gchar*" "tooltip")
+    '("const-gchar*" "stock_id")
+  )
+)
+
 (define-method toggled
   (of-object "GtkToggleAction")
   (c-name "gtk_toggle_action_toggled")
@@ -25180,6 +25227,15 @@
   (return-type "GtkWidget*")
   (parameters
     '("const-gchar*" "path")
+  )
+)
+
+(define-method get_toplevels
+  (of-object "GtkUIManager")
+  (c-name "gtk_ui_manager_get_toplevels")
+  (return-type "GSList*")
+  (parameters
+    '("GtkUIManagerItemType" "types")
   )
 )
 
