@@ -427,9 +427,9 @@ guint Main::level()
   return instance_->level_impl();
 }
 
-void Main::iteration(bool blocking)
+bool Main::iteration(bool blocking)
 {
-  instance_->iteration_impl(blocking);
+  return instance_->iteration_impl(blocking);
 }
 
 bool Main::events_pending()
@@ -473,15 +473,14 @@ guint Main::level_impl()
   return gtk_main_level();
 }
 
-void Main::iteration_impl(bool blocking)
+bool Main::iteration_impl(bool blocking)
 {
-  gtk_main_iteration_do(blocking);
+  return gtk_main_iteration_do(blocking);
 }
 
 bool Main::events_pending_impl()
 {
-  // GTK+ declares it as gint, but it's really a boolean.
-  return gtk_events_pending() != 0;
+  return gtk_events_pending();
 }
 
 void Main::on_window_hide()
