@@ -73,7 +73,7 @@ public:
 
   _WRAP_SIGNAL(bool event(const Glib::RefPtr<Glib::Object>& event_object, GdkEvent* event, const TextIter& iter), "event")
 
-  //_WRAP_PROPERTY("name", Glib::ustring) //construct-only.
+  _WRAP_PROPERTY("name", Glib::ustring) //construct-only.
   _WRAP_PROPERTY("background", Glib::ustring)
   _WRAP_PROPERTY("foreground", Glib::ustring)
   _WRAP_PROPERTY("background-gdk", Gdk::Color)
