@@ -1,3 +1,14 @@
+2004-01-09  Murray Cumming  <murrayc@usa.net>
+
+	* gtk/src/main.[hg|ccg]: Added docs, based on the C docs. Added bool
+	return value to iteration().
+	* gtk/src/uimanager.hg: Added wrapper for get_toplevels(), as wrapper
+	for gtk_ui_manager_get_toplevels().
+	* gtk/src/action.hg: add(): Use the new 
+	gtk_action_group_add_action_with_accels() instead of
+	gtk_action_group_add_action() so that it tries to use the stock 
+	accelerator if the action has a stock_id.
+
 2004-01-05  Murray Cumming  <murrayc@usa.net>
 
 	* gdk/src/image.hg: Added accessors for public struct fields.
